--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "^7.3.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-datepicker": "^4.15.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.0",
+    "react-native-web": "^0.18.12",
+    "react-navigation": "^4.4.4",
+    "react-router-native": "^6.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
