--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
+    "expo-asset": "^8.10.1",
+    "expo-file-system": "^15.4.2",
+    "expo-media-library": "^15.4.0",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "pdf-lib": "^1.17.1",
@@ -29,6 +32,7 @@
     "react-native-screens": "^3.22.0",
     "react-native-web": "^0.18.12",
     "react-navigation": "^4.4.4",
+    "react-router-dom": "^6.14.1",
     "react-router-native": "^6.14.1"
   },
   "devDependencies": {
